Integro neuvos estilos y buscador

--- a/docs/assets/css/app-css/styles3.css
+++ b/docs/assets/css/app-css/styles3.css
@@ -655,6 +655,7 @@
     overflow: hidden;
     display: flex;
     flex-direction: column;
+    background: white;
   }
 
   .task-sheet-modal.show .task-sheet-modal__content {
