--- a/docs/assets/css/app-css/calendar-main-css/calendar-main.css
+++ b/docs/assets/css/app-css/calendar-main-css/calendar-main.css
@@ -22,10 +22,80 @@ body {
   display: grid;
   align-items: center;
   border-bottom: 1.5px solid #c9ceec;
+  display: flex;
+  justify-content: space-between;
 }
 
 .nav-calendar-main h4 {
   font-weight: 600;
+}
+
+.herramientas-utils {
+  position: relative;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
+
+.OpenbusadorTareasCalendario i {
+  display: flex;
+  gap: 4px;
+  justify-content: center;
+  align-items: center;
+  font-size: 13px;
+  cursor: pointer;
+  border-radius: 50%;
+  padding: 6px;
+  position: relative;
+  background: #2facff;
+
+  color: #ffffff;
+}
+
+.buscador___conenedor {
+  position: fixed;
+  z-index: 90;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.1);
+  top: 0;
+  left: 0;
+  display: grid;
+  justify-content: center;
+  align-items: start;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition:
+    opacity 0.2s ease,
+    visibility 0.2s ease;
+}
+
+.buscador___conenedor.show {
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+
+.contenido___buscador {
+  margin-top: 15px;
+  width: 800px;
+  height: 50vh;
+  background: white;
+  border-radius: 25px;
+  padding: 20px;
+}
+.contenido___buscador input {
+  padding: 14px;
+  width: 100%;
+  border: 2px solid rgb(245, 245, 245);
+  border-radius: 20px;
+  transition: 0.2s ease;
+}
+
+.contenido___buscador input:focus {
+  outline: none;
+  border-color: #2facff;
 }
 
 /*Contenido*/
@@ -395,5 +465,15 @@ body {
     width: 36px;
     height: 36px;
     border-radius: 12px;
+  }
+
+  /*buscador*/
+
+  .contenido___buscador {
+    position: fixed;
+    margin-top: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 0;
   }
 }
